[gd_scene load_steps=4 format=2]

[ext_resource path="res://common/world/wall/wall.tscn" type="PackedScene" id=1]
[ext_resource path="res://client/world/wall/wall.png" type="Texture" id=2]
[ext_resource path="res://client/world/wall/wall.gd" type="Script" id=3]

[node name="Wall" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="UpperSprite" type="Sprite" parent="." index="0"]
position = Vector2( 0, -800 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 64, 1280 )

[node name="LowerSprite" type="Sprite" parent="." index="2"]
position = Vector2( 0, 800 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 64, 1280 )

[node name="PointArea" parent="." index="4"]
collision_mask = 1

[connection signal="body_entered" from="PointArea" to="." method="_on_PointArea_body_entered"]
